{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 62,
  "lineage": "ff07bf85-4fe1-7a33-d37b-1d190380ad5d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_to_jump_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-21T18:34:49.341-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-7989/global/firewalls/allow-iap-to-jump-box",
            "log_config": [],
            "name": "allow-iap-to-jump-box",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "priority": 1000,
            "project": "project-7989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/global/firewalls/allow-iap-to-jump-box",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jump-box"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-02-21T18:34:49.524-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-7989/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "priority": 1000,
            "project": "project-7989",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/global/firewalls/allow-internal",
            "source_ranges": [
              "10.5.0.0/20",
              "10.5.16.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_services_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.13.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2024-02-21T18:34:49.330-08:00",
            "id": "projects/project-7989/global/addresses/private-services-range",
            "name": "private-services-range",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "prefix_length": 16,
            "project": "project-7989",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/global/addresses/private-services-range"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jump_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2019-dc-v20240214",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-7989/zones/asia-south2-a/disks/jump-box"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-7989/zones/asia-south2-a/instances/jump-box",
            "instance_id": "7500246365029207042",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "p7qrsUAWwjI=",
            "name": "jump-box",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
                "network_ip": "10.5.16.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-7989/regions/asia-south2/subnetworks/public-subnet",
                "subnetwork_project": "project-7989"
              }
            ],
            "project": "project-7989",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/zones/asia-south2-a/instances/jump-box",
            "service_account": [
              {
                "email": "385214326649-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jump-box"
            ],
            "tags_fingerprint": "t1xAWTC81tA=",
            "zone": "asia-south2-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-7989/global/networks/banking-vpc",
            "mtu": 0,
            "name": "banking-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1192871721581612125",
            "project": "project-7989",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T18:34:50.124-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/project-7989/regions/asia-south2/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "project": "project-7989",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/regions/asia-south2/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "project-7989/asia-south2/nat-router/nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "project-7989",
            "region": "asia-south2",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T18:34:50.887-08:00",
            "gateway_address": "10.5.0.1",
            "id": "projects/project-7989/regions/asia-south2/subnetworks/gke-subnet",
            "ip_cidr_range": "10.5.0.0/20",
            "name": "gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-7989",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.43.0.0/17",
                "range_name": "gke-private-pods-a9c45d8a"
              },
              {
                "ip_cidr_range": "192.168.0.0/16",
                "range_name": "gke-private-services-a9c45d8a"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/regions/asia-south2/subnetworks/gke-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T18:34:51.384-08:00",
            "gateway_address": "10.5.16.1",
            "id": "projects/project-7989/regions/asia-south2/subnetworks/public-subnet",
            "ip_cidr_range": "10.5.16.0/20",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-7989/global/networks/banking-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-7989",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-7989/regions/asia-south2/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}